[bdist_wheel]
# set universal = 1 if Python 2 and 3 are supported
;universal = 1

[metadata]
name = snazzy
version = attr: snazzy.__version__
author = Martin Wendt
author_email = snazzy@wwwendt.de
maintainer = Martin Wendt
maintainer_email = snazzy@wwwendt.de
url = https://github.com/mar10/snazzy/
# download_url =
description = 'Stylish ANSI terminal colors and helpers'
long_description = file: README.md
long_description_content_type = text/markdown
keywords = terminal, console, ansi, escape
license = MIT
license_file = LICENSE
# project_urls	 	dict	38.3.0
# platforms 	list-comma
# provides	 	list-comma
# requires	 	list-comma
# obsoletes	 	list-comma
classifiers =
    Development Status :: 3 - Alpha
    # Development Status :: 4 - Beta
    # Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Build Tools
    Topic :: System :: Installation/Setup
    Topic :: System :: Software Distribution

[options]
# package_dir =
#     = snazzy
# packages = find:
zip_safe = False

install_requires =
    snazzy

# [options.packages.find]
# where = snazzy
# include_package_data = True
# exclude =
#     tests
